(#) Typo in English language

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,6 +27,13 @@ Legend:
  (!) - Change
 
 -------------------
+1.1.6 ()
+-------------------
+
+    (#) Typo in English language
+
+
+-------------------
 1.1.5 (28 January 2014)
 -------------------
 
