--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,13 +21,10 @@
 ; $HeadURL$
 
 
-SP.CRAWLER_CRON_INFO="You can also set a cronjob to periodicaly rebuild the cache using this command:
-
-- &nbsp;&nbsp;&nbsp;   <i><b>%s</i></b> - for this particular section
-- &nbsp;&nbsp;&nbsp;   <i><b>%s</i></b> - for all sections
-
-See: <i><b>%s</i></b> - for more information
-"
+SP.CRAWLER_CRON_INFO="You can also setup a cronjob to periodically rebuild the cache using these commands:
+For this particular section: <i><b>%s</i></b>
+For all sections: <i><b>%s</i></b>
+For more information see: <i><b>%s</i></b>"
 
 SP.ENTRY_VERSIONING_ADM_BEHAVIOUR="Behaviour in Admin Area"
 SP.VERSIONING_ADM_NO="Moderate"
