language file corrected

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,10 +21,7 @@
 ; $HeadURL$
 
 
-SP.CRAWLER_CRON_INFO="You can also setup a cronjob to periodically rebuild the cache using these commands:
-For this particular section: <i><b>%s</i></b>
-For all sections: <i><b>%s</i></b>
-For more information see: <i><b>%s</i></b>"
+SP.CRAWLER_CRON_INFO="You can also setup a cronjob to periodically rebuild the cache using these commands:\nFor this particular section: <i><b>%s</i></b>\nFor all sections: <i><b>%s</i></b>\nFor more information see: <i><b>%s</i></b>"
 
 SP.ENTRY_VERSIONING_ADM_BEHAVIOUR="Behaviour in Admin Area"
 SP.VERSIONING_ADM_NO="Moderate"
