--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 
     (#) Typo in English language
+    (#) Missing semicolon in alpha.js (Issue #1182)
 
 
 -------------------
