--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -30,7 +30,9 @@ Legend:
 -------------------
 1.1.6
 -------------------
+
     (#) Problems with searching when field is set to multi selection in the search (Issue #1187)
+    (#) Newly created categories are not approved by default (Issue #1183)
 
 -------------------
 1.1.5 (28 January 2014)
