new Translation repo for all SobiPro translations

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -34,6 +34,7 @@ Legend:
     (+) Possibility to define list of parameters to pass from the search function to the search results page
 
     (!) Improved exif data cleaning method
+    (!) Uncompressed js files removed from packages; separate package available
 
     (#) Problems with searching when field is set to multi selection in the search (Issue #1187)
     (#) Newly created categories are not approved by default (Issue #1183)
@@ -41,7 +42,7 @@ Legend:
     (#) Apostrophes are not correctly escaped in section name (Issue #1188)
     (#) Wrong path definition in the cronjob script
     (#) Several fixes in the crawler
-    (#) Special characters in regex not escaped. (Issue #1189)
+    (#) Special characters in regex not escaped (Issue #1189)
     (#) ACL permission "see unpublished entries" has no effect (Issue #1192)
     (#) Category field in fixed choice allow to select section id (Issue #1191)
     (#) Problem with creating Joomla! menu item (Issue #1166)
