--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -27,9 +27,9 @@
 
 SP.SOBI_SELECT_FUNCTIONALITY="Select Functionality"
 SP.MENU_LINK_TO_CATEGORY="Link to a Category"
-SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category: '%s'"
+SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category '%s'"
 SP.MENU_LINK_TO_ENTRY="Link to an Entry"
-SP.MENU_LINK_TO_SELECTED_ENTRY="Link to entry: '%s'"
+SP.MENU_LINK_TO_SELECTED_ENTRY="Link to entry '%s'"
 SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
 SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
 SP.SOBI_SELECT_ENTRY="Select Entry"
@@ -45,7 +45,7 @@ SP.SOBI_DATE_LISTING_MONTH="Select Month"
 SP.SOBI_DATE_LISTING_DAY="Select Day"
 SP.SOBI_USER_LISTING_SELECTED="Selected functionality: Link to user's own entries list. Click on 'Save Selection' button to continue."
 SP.MENU_LINK_TO_SECTION="Link to a Section"
-SP.MENU_LINK_TO_SECTION_SELECTED="Selected functionality: Link to section mainpage. Click on 'Save Selection' button to continue."
+SP.MENU_LINK_TO_SECTION_SELECTED="Selected functionality: Link to section main page. Click on 'Save Selection' button to continue."
 SP.SOBI_TPL_OVERRIDE_OPTIONAL="Optional"
 
 
