(+) Possibility to pass parameters to the editor

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 
     (+) Possibility to define list of exif data to pass to the XML output
+    (+) Possibility to pass parameters to the editor
 
     (!) Improved exif data cleaning method (again)
     (!) CSS style for alert messages
