--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -20,6 +20,9 @@
 ; $Author$
 ; $HeadURL$
 
+
+SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Showing only first %d results. Please specify more criteria to narrow the search down."
+
 SP.FM.ICON="Icon"
 
 SP.ENTRY_STATUS_UNAPPROVED="The currently displayed version of this entry is 'unapproved'. You can see this version because you have permission to see unapproved entries."
