(+) Possibility to delete a date form datetimepicker (Issue #1208)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -32,6 +32,7 @@ Legend:
 
     (+) Possibility to define list of exif data to pass to the XML output
     (+) Possibility to pass parameters to the editor
+    (+) Possibility to delete a date form datetimepicker (Issue #1208)
 
     (!) Improved exif data cleaning method (again) (Issue #1205)
     (!) Limiting the search results to 1000 by default (adjustable in config.ini)
