--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -41,6 +41,7 @@ Legend:
 
     (#) Possibility to define the Itemid and pass it to SobiPro::Url (Issue #1206)
     (#) Limiting the "explode" in crawler to separate body from header to two pieces
+    (#) Method SPDBObject::getChilds limits type to entries only.
 
 
 -------------------
