--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,7 +27,7 @@ Legend:
  (!) - Change
 
 -------------------
-1.1.7 (xx March 2014)
+1.1.7 (28 March 2014)
 -------------------
 
     (+) Possibility to define list of exif data to pass to the XML output
