--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,6 +27,13 @@ Legend:
  (!) - Change
 
 -------------------
+1.1.8 (29 March 2014)
+-------------------
+
+    (#) Cache improvement removed for Joomla 2.5
+
+
+-------------------
 1.1.7 (28 March 2014)
 -------------------
 
