--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,7 +27,14 @@ Legend:
  (!) - Change
 
 -------------------
-1.1.8 (29 March 2014)
+1.1.9 ()
+-------------------
+
+    (#) Rejection messages corrected
+
+
+-------------------
+1.1.8 (30 March 2014)
 -------------------
 
     (#) Cache improvement removed for Joomla 2.5
