--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -32,6 +32,8 @@ Legend:
 
     (#) Rejection messages corrected
 
+    (!) Requirement checker is getting current version from Joomla updater extension
+
 
 -------------------
 1.1.8 (30 March 2014)
