--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 
     (#) Rejection messages corrected
+    (#) Corrected attributes handling in SPHeader::meta()
 
     (!) Requirement checker is getting current version from Joomla updater extension
     (!) Some icons in administration panel improved (datepicker)
