--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -21,7 +21,7 @@
 ; $HeadURL$
 
 
-SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Showing only first %d results. Please specify more criteria to narrow the search down."
+SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Only the first %d results will be shown. Please specify more criteria to narrow down the search."
 
 SP.FM.ICON="Icon"
 
