--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -579,7 +579,7 @@ SP.SECN.CFG.REDIRECTS_SEARCH_SPACER="Search Form"
 SP.SECN.CFG.REDIRECTS_INPUT="Entry Input Form"
 SP.SECN.CFG.REDIRECTS_SAVE="Save Entry Input"
 SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work only if: <ul><li>the entry is a new entry</li><li>there is no payment page after the new entry has been added</li><li>the entry is not published automatically</li><li>and the particular user has no permission to see unpublished entries</li></ul>This means, only if a free entry is added from a user which have no rights to see unpublished entries and the entry is not automatically published, this redirection will work. In all other cases it cannot work as it would destroy the necessary sequence."
-SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
+SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="redirect to parent category"
 SP.SEC.CFG.ALLOWED_TAGS="Allowed Tags"
 SP.SEC.CFG.ALLOWED_ATTRIBUTES="Allowed Attributes"
 SP.SEC.CFG.CONFIGURATION_OF_SECTION="Configuration of Section 'var:[section]'"
