--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -21,6 +21,9 @@
 ; $HeadURL$
 
 
+SP.ITEMID_MISSING_WARN="It looks like some urls doesnt have a Joomla! Itemid set. Probably a menu entry to this particular section has not been created. You will find more information in the <a href="%s" target="_blank">documentation</a>. Object id was: %d"
+
+;SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Showing only first %d results. Please specify more criteria to narrow the search down."
 SP.SH.SEARCH_TOO_MANY_RESULTS="The search returned too many results (%d)! Only the first %d results will be shown. Please specify more criteria to narrow down the search."
 
 SP.FM.ICON="Icon"
