(!) Changed order of meta keys and meta description (Issue #1231)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -40,6 +40,7 @@ Legend:
 
     (!) Requirement checker is getting current version from Joomla updater extension
     (!) Some icons in administration panel improved (datepicker)
+    (!) Changed order of meta keys and meta description (Issue #1231)
 
 
 -------------------
