--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,7 +20,7 @@
 ; $Author$
 ; $HeadURL$
 
-SP.MENU_CAT_FUNCTION_SELECT_CAT_FIRST="Please select a category from the tree first"
+SP.MENU_CAT_FUNCTION_SELECT_CAT_FIRST="Please select a category from the tree first!"
 
 SP.CRAWLER_CRON_INFO="You can also setup a cronjob to periodically rebuild the cache using these commands:\nFor this particular section: <i><b>%s</i></b>\nFor all sections: <i><b>%s</i></b>\nFor more information see: <i><b>%s</i></b>"
 
