(#) Router not copied during installation process

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,6 +27,13 @@ Legend:
  (!) - Change
 
 -------------------
+1.1.10 ()
+-------------------
+
+    (#) Router not copied during installation process
+
+
+-------------------
 1.1.9 (03 July 2014)
 -------------------
 
