(#) Bug in SPHeader::addMeta fixed

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 
     (#) Router not copied during installation process
+    (#) Bug in SPHeader::addMeta fixed
 
 
 -------------------
