(+) "Save and New" functionality for entries and categories

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,9 @@
 ; $Author$
 ; $HeadURL$
 
+SP.TB.SAVE_AND_NEW="Save and New"
+SP.TB.SAVE_AS_COPY="Save as Copy"
+
 SP.MENU_CAT_FUNCTION_SELECT_CAT_FIRST="Please select a category from the tree first!"
 
 SP.CRAWLER_CRON_INFO="You can also setup a cronjob to periodically rebuild the cache using these commands:\nFor this particular section: <i><b>%s</i></b>\nFor all sections: <i><b>%s</i></b>\nFor more information see: <i><b>%s</i></b>"
@@ -120,7 +123,7 @@ SP.STATUS_SUCCESS="Success"
 SP.TB.SECTIONS="Sections"
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
-SP.TB.SAVE_NEW="Save as New"
+;SP.TB.SAVE_NEW="Save as New"
 SP.TB.ACTIONS="Actions"
 SP.TB.PUBLISHING="State"
 SP.TB.ENABLED="State"
