--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -30,9 +30,13 @@ Legend:
 1.1.10 ()
 -------------------
 
+    (+) "Save and New" functionality for entries and categories
+
     (#) Router not copied during installation process
     (#) Bug in SPHeader::addMeta fixed
-    (#) Parent category in add entry form not pre-selected
+    (#) Parent category in add entry form not pre-selected (Issue #1299)
+
+    (!) Label "Save as New" to "Save as Copy"
 
 -------------------
 1.1.9 (03 July 2014)
