--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,7 +20,7 @@
 ; $Author$
 ; $HeadURL$
 
-SP.TB.SAVE_AND_NEW="Save and New"
+SP.TB.SAVE_AND_NEW="Save & New"
 SP.TB.SAVE_AS_COPY="Save as Copy"
 
 SP.MENU_CAT_FUNCTION_SELECT_CAT_FIRST="Please select a category from the tree first!"
