(!) Changing all db dates to UTC. Warning! can cause a glitch in the matrix

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -33,6 +33,7 @@ Legend:
     (+) "Save & New" functionality for entries and categories
 
     (!) Label "Save as New" to "Save as Copy"
+    (!) Changing all db dates to UTC. Warning! can cause a glitch in the matrix
 
     (#) Router not copied during installation process
     (#) Bug in SPHeader::addMeta fixed
