--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -38,6 +38,7 @@ Legend:
     (!) Dates like "valid until, since, etc" are displayed in the in Joomla! set timezone
 
     (#) Router not copied during installation process
+    (#) Changed language recognition method (compatibility with Joomla! 3.3.2)
     (#) Bug in SPHeader::addMeta fixed
     (#) Parent category in add entry form not pre-selected (Issue #1299)
     (#) Limiting chars for textarea doesn't work correctly with Hebrew chars (Issue #1293)
